记录日志访问链路笔记